--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "tinder for developers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch src/app.js"
   },
   "keywords": [
     "nodejs",
@@ -13,6 +14,7 @@
   "author": "Raviteja",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1"
   }
 }
