--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "tinder for developers",
   "main": "index.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch src/app.js"
   },
